css/main.scss
/* ... */
    
.readmore {
        font-weight: bold;
        text-decoration: underline;
    }

.readmore:hover {
    color: #cba0c6;
}

.readmore:active {
    color: #707070;
}

.portfolio-container img, video {
    border-radius: 1em;
    margin: 1em 0;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}

.about {
    background: white;
}

#about-subtitle {
    margin-top: 0 !important;
}

.contact {
    position: relative;
    background: #F0E9F1;
    background: linear-gradient(180deg, rgba(240, 233, 241, 1) 10%, rgba(255, 255, 255, 1) 30%);
    text-align: center;
    padding-top: 2em !important;
    padding-bottom: 1em;
    margin-top: -5px;
}

.loveletter {
    width: 250px;
    margin-left: auto;
    margin-right: auto;

    #hearts, #open {
        opacity: 0;
    }
}

.section-title {
    font-size: 2em;
    margin-top: .3em;
}

.section-subtitle {
    font-size: 1.5em;
    margin-top: -1.2em;
    color: #ad7fa8;

    .fa-heart {
        font-size: .6em;
        vertical-align: middle;
    }
}

footer {
    background-color: #f0e9f1;
    padding: .5em .5em;
    text-align: center;
    font-size: 1.2em;

    a:hover {
        color:#3f2140;
        font-weight: bold;
    }
}

.made-with-love {
    height: .9em;
    padding-right: 2em;
}

.impressum {
    background-color: white;
    border-radius: 1em;
    margin: 1em;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
    color: black;
    font-size: 1.2em;
    font-weight: 500;
    text-align: left;
    padding: 1em;

    h1 {
        margin-top: 0px;
    }
}   

.goodbye {
    height: 20vh;
    svg {
        height: 100%;
        margin-left: -100%;
    }
}

#nav-back {
    display: none;
    width: 100%;
    position: fixed;
    z-index: 9999999999;
    top: 0;
}

.styled {
    background-color: #ad7fa8c0;
}

.back-arrow {
    width: 200px;
    margin: 1em;
}

.back-arrow:hover {
    path {
     fill:#886684;
    }
}

.send-mail {
    margin-bottom: unset;

    .fa-envelope {
        color: #886684;
        padding-right: 2px;
    }
}

.send-mail:hover {
    .fa-envelope, span  {
        color: #3f2140;
        font-weight: bold;
    }
}

.disclaimer h1 {
    margin-top: 0px;
}

.photography-body {
    background-color: #222;
}

/*media queries*/
@media only screen and (min-width: 500px) {
    header ul a {
        padding: .5em .5em;
    }
      
    #web-headline-2 {margin-bottom: -2.5em !important;}
    #info-postcards {margin-top: -14em !important;}
    .title-75p {width: 88% !important;}
    #first-paragraph {width: 83% !important;}
    #sum {margin-top: .5em;}
    
}

@media only screen and (min-width: 800px) {
    header {
        font-size: 1.5em;

        a {
            margin-top: -.3em;
        } 
    }

    .name {
            display: unset !important;
    }

    .hero {
        .hero-design {
            max-width: 85vw;
            max-height: 45vh;
        }

        .meet {
            margin-top: 0 !important;
            p {font-size: 1.2em;}
        }
    }

    .headline {
        font-size: 6em !important;
    }

    .featured, .portfolio {
        text-align: left;
    }

    .portfolio-container {
        display: grid;
        grid-template-columns: 40% auto;
    }

    .featured img {
        float: right;
    }

    #title-desktop {
        display: block;
    }

    #title-mobile {
        display: none;
    }

    .left, .portfolio-left {
        display: grid;
        place-content: center;
    }

    .right {
        margin-top: 2em;
    }

    .skills {
        margin-bottom: -10em;
        padding: 3em !important;

        svg {
            width: 100%;
            justify-content: center;
        }
    }

    .skills-container ul {
        display: grid;
        grid-template-columns: repeat(3, auto);
        grid-gap: 1em;
    }

    #portfolio-section-start {
        padding-top: 10em;
    }

    .portfolio-start {
        padding-top: 3em !important;
    }

    .portfolio {
        padding: 0 3em;
    }

    .portfolio-container img, video {
        margin-top: 3em;
    }

    .portfolio-right {
        padding-left: 2em;
    }

    .work-examples {
        #corporate-gallery {
            padding: 5em 0 !important;
        }

         .corporate-img {
            height: 300px !important;
        }

        .logo-img {
            height: 400px !important;
        }

        .info-container {
            padding: 5em 3em 3em 3em;
        }

        #web-headline, #web-headline-1 {display: block;}
        #web-headline-2 {display: none !important;}
        #mockup {display: block;}
        #mockup-mobil {display: none !important;}

        .google-batch {
        svg {width: 150px;}
        padding-top: unset;
        }

        #seahorse {
            width: 45% !important;
            margin: -3.5em 0 0 -6em !important;
        }

        .logo-container {
            width: 55% !important;
            margin: -20em auto 0 auto !important;
            padding: 0 0 0 3em;
        }   
        
        #art4change-logo {
            width: 100%;
        }  

        .double-img-grid {
            flex-direction: row !important;
            column-gap: 1em !important;
            padding: 2em 3em;
        }

        .grid-img {
            min-height: unset !important;
            width: 50% !important;
            aspect-ratio: 1 !important;
        }

        #jellyfish {
            width: 55% !important;
            margin: 0 0 -53% 75%;
        }
            
        #info-postcards {
            margin-top: -14em !important;
            padding-bottom: 3em !important;
        }

        #second-paragraph {
            width: 83%;
        }

        .title-75p {
            width: 80% !important;
        }
    }

    .end {
        padding-bottom: 2em;
    }
    
    .loveletter {
        width: 500px;
    }

    .impressum {
        font-size: 1.5em;
        margin: 3em;
    }
}
/* ... */

